--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,12 @@
     --color-body: #918ca4;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 /* Typography */
 html {
     font-size: 62.5%;
@@ -165,4 +171,142 @@ a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+/* buttons - Own */
+.button {
+    display: block;
+    width: 40rem;
+    padding: 2.5rem 0;
+    border-radius: 36px;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+
+.button--accent {
+    background: var(--color-accent);
+    border: none;
+    color: #fff
+}
+
+.button--secondary {
+    background: var(--color-secondary);
+    border: none;
+    color: #fff
+}
+
+.button--stretched {
+    width: fit-content;
+    padding: 2.5rem 3.6rem;
+}
+
+.button--block {
+    width: 100%;
+    font-weight: 600;
+}
+
+.button--outlined {
+    background: none;
+    color: var(--color-headings);
+    border-color: var(--color-headings);
+}
+
+.button--outlined:hover {
+    background: var(--color-headings);
+    color: #fff;
+    border: none
+}
+
+.button--icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button__icon {
+    width: 1.8rem;
+    margin-right: 1rem;
+}
+
+@media screen and (min-width:1024px) {
+    .button {
+        width: 18rem;
+    }
+
+    .button--block {
+        width: 100%
+    }
+
+    .button__icon {
+        width: 1.8rem;
+        margin-right: 1rem;
+    }
+
+    .button--secondary {
+        width: 40rem;
+    }
+}
+
+/* Buttons as Per Mosh */
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.btn--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.btn--primary:hover {
+    background: #3a8ffd
+}
+
+.btn--secondary {
+    background: var(--color-secondary);
+    color: #fff;
+}
+
+.btn--secondary:hover {
+    background: #00c8eb;
+}
+
+.btn--accent {
+    background: var(--color-accent);
+    color: #fff;
+}
+
+.btn--accent:hover {
+    background: #ec3000;
+}
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+.btn--outline {
+    background: #fff;
+    color: var(--color-headings);
+    border: 3px solid var(--color-headings);
+}
+
+.btn--outline:hover {
+    background: var(--color-headings);
+    color: #fff;
+}
+
+@media screen and (min-width:1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
