--- a/styles/styles.css
+++ b/styles/styles.css
@@ -570,7 +570,7 @@ a {
 @media screen and (min-width:768px) {
     .grid--1x2 {
         grid-template-columns: 1fr 1fr;
-        grid-template-columns: repeat(2, fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
