used parcel to build

--- a/components/block-showcase.html
+++ b/components/block-showcase.html
@@ -4,16 +4,16 @@
     </header>
     <div class="container grid grid--1x2">
         <picture class="block-showcase__image">
-            <source type="image/webp" srcset="images/resized/ipad@2x.webp 2x,images/resized/ipad.webp 1x">
-            <source type="image/png" srcset="images/resized/ipad@2x.png 2x,images/resized/ipad.png 1x">
-            <img src="images/resized/ipad.png" alt="">
+            <source type="image/webp" srcset="../images/resized/ipad@2x.webp 2x,../images/resized/ipad.webp 1x">
+            <source type="image/png" srcset="../images/resized/ipad@2x.png 2x,../images/resized/ipad.png 1x">
+            <img src="../images/resized/ipad.png" alt="">
         </picture>
         <ul class="list">
             <li>
                 <div class="media">
                     <div class="media__image">
                         <svg class="icon icon--primary">
-                            <use xlink:href="images/sprite.svg#snap"></use>
+                            <use href="../images/sprite.svg#snap"></use>
                         </svg>
                     </div>
                     <div class="media__body">
@@ -27,7 +27,7 @@
                 <div class="media">
                     <div class="media__image">
                         <svg class="icon icon--primary">
-                            <use xlink:href="images/sprite.svg#snap"></use>
+                            <use href="../images/sprite.svg#snap"></use>
                         </svg>
                     </div>
                     <div class="media__body">
@@ -41,7 +41,7 @@
                 <div class="media">
                     <div class="media__image">
                         <svg class="icon icon--primary">
-                            <use xlink:href="images/sprite.svg#snap"></use>
+                            <use href="../images/sprite.svg#snap"></use>
                         </svg>
                     </div>
                     <div class="media__body">
