--- a/components/buttons-own.html
+++ b/components/buttons-own.html
@@ -1,5 +1,6 @@
 <button class="button button--accent">Get Started</button>
-<button class="button button--accent button--stretched button--icon"><img class="button__icon" src="images/search.svg">
+<button class="button button--accent button--stretched button--icon"><img class="button__icon"
+        src="../images/search.svg">
     Search</button>
 <button class="button button--block button--outlined">Get Started</button>
 <button class="button button--secondary">Get Started</button>
