--- a/components/block-features.html
+++ b/components/block-features.html
@@ -8,7 +8,7 @@
         <div class="feature__content">
             <span class="icon-container">
                 <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#easy"></use>
+                    <use href="../images/sprite.svg#easy"></use>
                 </svg>
             </span>
             <h3 class="feature__heading">Easy to Use</h3>
@@ -17,16 +17,16 @@
             <a href="" class="link-arrow">Learn more</a>
         </div>
         <picture>
-            <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
-            <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-            <img class="feature__image" src="images/resized/easy@2x.jpg">
+            <source type="image/webp" srcset="../images/resized/easy@2x.webp 2x, ../images/resized/easy.webp 1x">
+            <source type="image/jpg" srcset="../images/resized/easy@2x.jpg 2x, ../images/resized/easy.jpg 1x">
+            <img class="feature__image" src="../images/resized/easy@2x.jpg">
         </picture>
     </article>
     <article class="grid grid--1x2 feature">
         <div class="feature__content">
             <span class="icon-container">
                 <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#computer"></use>
+                    <use href="../images/sprite.svg#computer"></use>
                 </svg>
             </span>
             <h3 class="feature__heading">Easy to Use</h3>
@@ -35,16 +35,16 @@
             <a href="" class="link-arrow">Learn more</a>
         </div>
         <picture>
-            <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
-            <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-            <img class="feature__image" src="images/resized/easy@2x.jpg">
+            <source type="image/webp" srcset="../images/resized/easy@2x.webp 2x, ../images/resized/easy.webp 1x">
+            <source type="image/jpg" srcset="../images/resized/easy@2x.jpg 2x, ../images/resized/easy.jpg 1x">
+            <img class="feature__image" src="../images/resized/easy@2x.jpg">
         </picture>
     </article>
     <article class="grid grid--1x2 feature">
         <div class="feature__content">
             <span class="icon-container">
                 <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#settings"></use>
+                    <use href="../images/sprite.svg#settings"></use>
                 </svg>
             </span>
             <h3 class="feature__heading">Easy to Use</h3>
@@ -53,16 +53,16 @@
             <a href="" class="link-arrow">Learn more</a>
         </div>
         <picture>
-            <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
-            <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-            <img class="feature__image" src="images/resized/easy@2x.jpg">
+            <source type="image/webp" srcset="../images/resized/easy@2x.webp 2x, ../images/resized/easy.webp 1x">
+            <source type="image/jpg" srcset="../images/resized/easy@2x.jpg 2x, ../images/resized/easy.jpg 1x">
+            <img class="feature__image" src="../images/resized/easy@2x.jpg">
         </picture>
     </article>
     <article class="grid grid--1x2 feature">
         <div class="feature__content">
             <span class="icon-container">
                 <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#clock"></use>
+                    <use href="../images/sprite.svg#clock"></use>
                 </svg>
             </span>
             <h3 class="feature__heading">Easy to Use</h3>
@@ -71,9 +71,9 @@
             <a href="" class="link-arrow">Learn more</a>
         </div>
         <picture>
-            <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
-            <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-            <img class="feature__image" src="images/resized/easy@2x.jpg">
+            <source type="image/webp" srcset="../images/resized/easy@2x.webp 2x, ../images/resized/easy.webp 1x">
+            <source type="image/jpg" srcset="../images/resized/easy@2x.jpg 2x, ../images/resized/easy.jpg 1x">
+            <img class="feature__image" src="../images/resized/easy@2x.jpg">
         </picture>
     </article>
 </section>
