--- a/components/block-hero.html
+++ b/components/block-hero.html
@@ -6,9 +6,9 @@
             <a href="/" class="btn btn--accent btn--stretched">Get Started</a>
         </header>
         <picture>
-            <source type="image/webp" srcset="images/resized/banner.webp 1x, images/resized/banner@2x.webp 2x">
-            <source type="image/png" srcset="images/resized/banner.png 1x, images/resized/banner@2x.png 2x">
-            <img class="hero__image" src="images/banner@2x.png">
+            <source type="image/webp" srcset="../images/resized/banner.webp 1x, ../images/resized/banner@2x.webp 2x">
+            <source type="image/png" srcset="../images/resized/banner.png 1x, ../images/resized/banner@2x.png 2x">
+            <img class="hero__image" src="../images/resized/banner@2x.png">
         </picture>
     </div>
 </section>
