--- a/components/footer.html
+++ b/components/footer.html
@@ -4,7 +4,7 @@
             <header class="collapsible__header">
                 <h2 class="collapsible__heading footer__heading">Item 1</h2>
                 <svg class="icon icon--white collapsible__chevron">
-                    <use xlink:href="images/sprite.svg#chevron"></use>
+                    <use href="../images/sprite.svg#chevron"></use>
                 </svg>
             </header>
             <div class="collapsible__content">
@@ -21,7 +21,7 @@
             <header class="collapsible__header">
                 <h2 class="collapsible__heading footer__heading">Item 2</h2>
                 <svg class="icon icon--white collapsible__chevron">
-                    <use xlink:href="images/sprite.svg#chevron"></use>
+                    <use href="../images/sprite.svg#chevron"></use>
                 </svg>
             </header>
             <div class="collapsible__content">
@@ -41,7 +41,7 @@
             <header class="collapsible__header">
                 <h2 class="collapsible__heading footer__heading">Item 3</h2>
                 <svg class="icon icon--white collapsible__chevron">
-                    <use xlink:href="images/sprite.svg#chevron"></use>
+                    <use href="../images/sprite.svg#chevron"></use>
                 </svg>
             </header>
             <div class="collapsible__content">
@@ -61,7 +61,7 @@
             <header class="collapsible__header">
                 <h2 class="collapsible__heading footer__heading">Item 3</h2>
                 <svg class="icon icon--white collapsible__chevron">
-                    <use xlink:href="images/sprite.svg#chevron"></use>
+                    <use href="../images/sprite.svg#chevron"></use>
                 </svg>
             </header>
             <div class="collapsible__content">
@@ -79,7 +79,7 @@
             </div>
         </section>
         <section class="footer__brand">
-            <img src="images/logo.svg" alt="">
+            <img src="../images/logo.svg" alt="">
             <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
         </section>
     </div>
